2.1.2

  * doc/index.html: add deepOfix Mail Server to list of distributions
    that include runit (thx Debayan Banerjee).

2.1.1
Sun, 04 Oct 2009 20:28:38 +0000
  * doc/upgrade.html: fix typo.
  * sv.c: on 'down', send runsv the 'down' command properly if not yet
    done (e.g. when taken up with 'once').

2.1.0
Thu, 24 Sep 2009 22:49:33 +0000
  * pathexec_env.c, pathexec.h: add function pathexec_env_run().
  * chpst.c, man/chpst.8: new option -b argv0: run prog with different
    0th argument.
  * sv.c: fix exit code of status command in lsb mode (thx Mathieu
    Poumeyrol)
  * chpst.c, svwaitdown.c, svwaitup.c: fix checks for return value of
    open_* functions (thx David Reiss).
  * runsv.c: exit with error if [log/]supervise/control exists, but is
    not a fifo (thx Charlie Brady).
  * man/sv.8: clarify which return values apply to the LSB init script
    interface.

2.0.0
Sun, 15 Jun 2008 15:31:05 +0000

1.9.0
Mon, 05 May 2008 22:00:13 +0000
  * doc/upgrade.html: typo.
  * sv.c: service name is also relative to the current directory if it
    ends with a slash.
  * change default directory for services from /var/service/ to /service/.
  * runsv.c: create temporary new status files for log/supervise/ actually
    in log/supervise/.
  * doc/benefits.html: minor additions.

1.8.0
Fri, 21 Sep 2007 00:33:56 +0000
  * man/svlogd.8: add hint on how to manually remove log files after the
    number of log files svlogd should maintain has been reduced; add hint
    about increasing the buffer size if lots of data is to be processed
    in short time.
  * chpst.c, uidgid.c: improve error reporting if getpwnam() or getgrnam()
    fails; cleanup.
  * svlogd.c: don't statically bind local udp socket, but request new
    source port for each log message sent through udp.
  * runit.c: fix typo in error messages (thx Matthew R. Dempsky); minor
    rewording.
  * doc/useinit.html: add instructions on how to use with upstart (thx
    Lloyd Zusman).